--- a/public/views/form/itemregistration.html
+++ b/public/views/form/itemregistration.html
@@ -84,7 +84,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<button class="btn btn-lg btn-success u__margin20 right">complete registration</button>
+				<button ng-click="completeItems(items)" class="btn btn-lg btn-success u__margin20 right">complete registration</button>
 			</div>
 		</div>
 		<hr>
