--- a/scss/partials/_content.scss
+++ b/scss/partials/_content.scss
@@ -3,6 +3,7 @@
 	margin: 25px 40px 40px 280px;
 	min-height: 200px;
 	padding: 30px 40px;
+	min-width: 340px;
 	width: auto;
 	box-shadow: 0px 2px 4px 0px rgba(210,210,210,0.50);
 	border-radius: 3px;
