--- a/public/views/form/itemregistration.html
+++ b/public/views/form/itemregistration.html
@@ -9,7 +9,7 @@
 						<p class="small bold form-text">Date</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">8 Sep 2015</p>
+						<p class="small form-text">{{today | date:'d MMM yyyy'}}</p>
 					</div>
 				</div>
 			</div>
