--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,6 +1,7 @@
 //== Color Palatte
-$color-skyblue: rgb(69,156,255);
+$color-skyblue: rgb(65, 131, 215);
 $color-green: rgb(68,219,93);
+// $color-green: rgb(46, 204, 113);
 $color-yellow: rgb(255,198,0);
 $color-red: rgb(231,76,60);
 $color-midnight: rgb(32,43,64);
