--- a/public/views/form/stockadjustment.html
+++ b/public/views/form/stockadjustment.html
@@ -9,7 +9,7 @@
 						<p class="small bold form-text">Date</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">8 Sep 2015</p>
+						<p class="small form-text">{{ today | date:'d MMM yyyy'}}</p>
 					</div>
 				</div>
 			</div>
@@ -19,7 +19,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">Bangmod</p>
+						<p class="small form-text">{{ user.relationships.branch.name}}</p>
 					</div>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 						<p class="small bold form-text">Staff</p>
 					</div>
 					<div class="col-md-7">
-						<p class="small form-text">Michelle Morris</p>
+						<p class="small form-text">{{ user.attributes.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -41,7 +41,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">134 Prachauthid Ladprao Rd.</p>
+						<p class="small form-text">{{ user.relationships.branch.address}}</p>
 					</div>
 				</div>
 			</div>
@@ -68,25 +68,15 @@
 							<th>Type</th>
 							<th>Cost per unit</th>
 							<th>Qty.</th>
-							<th>Option</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td class="bold text-center narrow">1</td>
-							<td>TV Sony 42” Model: 5G112TG</td>
-							<td>Product</td>
-							<td>18,500</td>
-							<td>3,000</td>
-							<td><div class="fa fa-edit"></div></td>
-						</tr>
-						<tr>
-							<td class="bold text-center narrow">2</td>
-							<td>Microwave SR992</td>
-							<td>Product</td>
-							<td>2,700</td>
-							<td>40,000</td>
-							<td><div class="fa fa-edit"></div></td>
+							<td><input type="text" class="input-lg" placeholder="Item Name" ></td>
+							<td><input type="text" class="input-lg" placeholder="Product" ></td>
+							<td><input type="text" class="input-md" placeholder="300" ></td>
+							<td><input type="text" class="input-md" placeholder="1500" ></td>
 						</tr>
 					</tbody>
 				</table>
