--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5275,26 +5275,54 @@ input[type="date"] {
   color: #738699;
   background-color: #f2f2f2;
   border-radius: 4.5px;
-  border: none; }
+  border: 1px solid #d9d9d9; }
 
 textarea {
   color: #738699;
   background-color: #f2f2f2;
   border-radius: 4.5px;
-  border: none; }
+  border: 1px solid #d9d9d9; }
 
 select {
   color: #738699;
   background-color: #f2f2f2 !important;
   border: none;
   border-radius: 4.5px;
-  border: none;
+  border: 1px solid #d9d9d9;
   box-shadow: none;
   background-color: transparent;
   background-image: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none; }
+
+table input[type="text"],
+table input[type="email"],
+table input[type="password"],
+table input[type="date"],
+table textarea,
+table select {
+  padding: 10px 5px !important;
+  background-color: transparent;
+  border: 1px solid transparent; }
+  table input[type="text"]:hover, table input[type="text"]:active, table input[type="text"]:focus,
+  table input[type="email"]:hover,
+  table input[type="email"]:active,
+  table input[type="email"]:focus,
+  table input[type="password"]:hover,
+  table input[type="password"]:active,
+  table input[type="password"]:focus,
+  table input[type="date"]:hover,
+  table input[type="date"]:active,
+  table input[type="date"]:focus,
+  table textarea:hover,
+  table textarea:active,
+  table textarea:focus,
+  table select:hover,
+  table select:active,
+  table select:focus {
+    background-color: #e5e5e5;
+    border: 1px solid #d9d9d9; }
 
 h1 {
   font-size: 43px;
