--- a/public/views/form/itemregistration.html
+++ b/public/views/form/itemregistration.html
@@ -73,11 +73,12 @@
 							<th>Type</th>
 							<th>Cost per unit</th>
 							<th>Qty.</th>
+							<th>Option</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr style="cursor: default;"class="animated fadeIn" ng-show="items.length == 0">
-							<td class="text-center" colspan="5">Please add the items</td>
+							<td class="text-center" colspan="6">Please add the items</td>
 						</tr>
 						<tr class="animated fadeIn" ng-repeat="item in items">
 							<td class="bold text-center narrow">{{ $index + 1 }}</td>
@@ -85,6 +86,7 @@
 							<td>{{ item.type.attributes.name }}</td>
 							<td>{{ item.cost }}</td>
 							<td>{{ item.quantity }}</td>
+							<td><i ng-click="deleteItem($index)" class="fa fa-close"></i></td>
 						</tr>
 					</tbody>
 				</table>
