--- a/public/views/form/requesteditems.html
+++ b/public/views/form/requesteditems.html
@@ -9,7 +9,7 @@
 						<p class="small bold form-text">Date</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">8 Sep 2015</p>
+						<p class="small form-text">{{ today | date:'d MMM yyyy' }}</p>
 					</div>
 				</div>
 			</div>
@@ -19,7 +19,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">Bangmod</p>
+						<p class="small form-text">{{ user.relationships.branch.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 						<p class="small bold form-text">Staff</p>
 					</div>
 					<div class="col-md-7">
-						<p class="small form-text">Michelle Morris</p>
+						<p class="small form-text">{{ user.attributes.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -41,7 +41,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">134 Prachauthid Ladprao Rd.</p>
+						<p class="small form-text">{{ user.relationships.branch.address }}</p>
 					</div>
 				</div>
 			</div>
@@ -53,9 +53,10 @@
 						<p class="small bold form-text">To Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<select class="input-lg">
-							<option value="1">Hitachi</option>
-							<option value="2">Aroler</option>
+						<select ng-init="customer = companies[0]" 
+								ng-model="customer"
+								ng-options="customer.attributes.name for customer in companies"
+								class="input-lg">
 						</select>
 						<i class="fa fa-caret-down caret-select"></i>
 					</div>
@@ -86,7 +87,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<button class="btn btn-lg btn-success u__margin20 right">complete order</button>
+				<button class="btn btn-lg btn-success u__margin20 right">complete request</button>
 			</div>
 		</div>
 		<hr>
@@ -116,7 +117,7 @@
 			<div class="col-md-6 col-md-offset-6">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-5">
-						<button class="btn btn-md btn-success">Add To Stock</button>
+						<button class="btn btn-md btn-success">Add To Request</button>
 					</div>
 				</div>
 			</div>
