--- a/public/views/report/itemRegistrationHistory.html
+++ b/public/views/report/itemRegistrationHistory.html
@@ -19,7 +19,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">Bangmod</p>
+						<p class="small form-text">{{ user.relationships.branch.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">134 Prachauthid Ladprao Rd.</p>
+						<p class="small form-text">{{ user.relationships.branch.address }}</p>
 					</div>
 				</div>
 			</div>
