--- a/public/views/report/orderHistoryByStatus.html
+++ b/public/views/report/orderHistoryByStatus.html
@@ -19,22 +19,22 @@
             </div>
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-5 text-right">
                         <p class="small bold form-text">Branch</p>
                     </div>
-                    <div class="col-md-6 ">
-                        <p class="small form-text">Bangmod</p>
+                    <div class="col-md-7 ">
+                        <p class="small form-text">{{ user.relationships.branch.name }}</p>
                     </div>
                 </div>
             </div>
          </div>
             <div class="col-md-6 col-md-offset-6">
                 <div class="row">
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-5 text-right">
                         <p class="small bold form-text">Address</p>
                     </div>
-                    <div class="col-md-6 ">
-                        <p class="small form-text">134 Prachauthid Ladprao Rd.</p>
+                    <div class="col-md-7 ">
+                        <p class="small form-text">{{ user.relationships.branch.address }}</p>
                     </div>
                 </div>
             </div>
