--- a/public/views/report/stockcard.html
+++ b/public/views/report/stockcard.html
@@ -9,7 +9,7 @@
 						<p class="small bold form-text">Month</p>
 					</div>
 					<div class="col-md-7 ">
-						<input type="date" class="input-lg">
+						<input ng-model="stockDate" type="date" class="input-lg">
 					</div>
 				</div>
 			</div>
@@ -19,7 +19,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">Bangmod</p>
+						<p class="small form-text">{{ user.relationships.branch.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -41,7 +41,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">134 Prachauthid Ladprao Rd.</p>
+						<p class="small form-text">{{ user.relationships.branch.address }}</p>
 					</div>
 				</div>
 			</div>
