--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -11,7 +11,8 @@
 	top: 0;
 	padding-bottom: 100px;
 	min-height: 100vh;
-	// height: 100%;
+	// height: 1000px;
+	// display: block;
 	background-color: $color-lightmidnight;
 	width: 240px;
 	&-brand {
