--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "vendors/bootstrap";
 @import "vendors/daneanimate";
 @import "vendors/font-awesome";
+@import "vendors/sweetalert";
 
 @import "modules/all";
 @import "partials/base";
