--- a/scss/partials/_content.scss
+++ b/scss/partials/_content.scss
@@ -18,15 +18,29 @@
 		.row {
 			margin: 10px 0;
 		}
+		table {
+			.caret-select {
+				display: none;
+				position: relative;
+				left: auto;
+				top: 2px;
+				margin-left: -27px;
+			}
+			td:hover {
+				.caret-select {
+					display: inline-block;
+				}
+			}
+		}
 		.caret-select {
-	    position: absolute;
-	    left: 83%;
-	    top: 14px;
-	    font-size: 21px;
-	    color: $color-grey;
-	    &.select-md {
-	    	left: 128px;
-	    }
+		    position: absolute;
+		    left: 83%;
+		    top: 14px;
+		    font-size: 21px;
+		    color: $color-grey;
+		    &.select-md {
+		    	left: 128px;
+		    }
 		}
 	}
 }
@@ -35,4 +49,7 @@
 }
 .u__margin20 {
   margin: 20px 0;
+}
+.loading {
+	opacity: .2;
 }
