--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -5,9 +5,9 @@
 	-moz-transition: all .1s linear;
 }
 .sidebar {
-	position: fixed;
+	position: absolute;
 	left: 0;
-	bottom: 0;
+	// bottom: 0;
 	top: 0;
 	padding-bottom: 100px;
 	min-height: 100vh;
